Rinominato service in FastAPI Gateway e aggiornate configurazioni

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SERVICE_NAME='Template FastAPI'
+SERVICE_NAME='FastAPI Gateway'
 SERVICE_VERSION=0.1.0
 DATABASE_URL=sqlite:///./database.db
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
