--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "servizio-template"
+name = "FastAPI Gateway"
 version = "0.1.0"
-description = "Template dei servizi FastAPI orientati"
+description = "Gateway service"
 authors = [
     {name = "Federico Zorgnotto",email = "f.zorgnotto.2759@vallauri.edu"}
 ]
@@ -17,7 +17,9 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "aio-pika (>=9.5.7,<10.0.0)",
-    "sentry-sdk (>=2.35.0,<3.0.0)"
+    "sentry-sdk (>=2.35.0,<3.0.0)",
+    "pydantic[email] (>=2.11.7,<3.0.0)",
+    "orjson (>=3.11.2,<4.0.0)"
 ]
 
 [build-system]
