--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "aio-pika (>=9.5.7,<10.0.0)",
     "sentry-sdk (>=2.35.0,<3.0.0)",
     "pydantic[email] (>=2.11.7,<3.0.0)",
-    "orjson (>=3.11.2,<4.0.0)"
+    "orjson (>=3.11.2,<4.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
+    "bcrypt (>=4.3.0,<5.0.0)"
 ]
 
 [build-system]
