--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-SERVICE_NAME='FastAPI Gateway'
-SERVICE_VERSION=0.1.0
-DATABASE_URL=postgresql+psycopg2://devuser:devpass@db:5432/gateway
-RABBITMQ_URL=amqp://guest:guest@localhost:5672/
-SERVICE_PORT=8000
-USERS_SERVICE_URL=http://users:8000
-ENVIRONMENT=development
-SENTRY_DSN=""
-SENTRY_RELEASE=""
-
+GATEWAY_SERVICE_NAME='FastAPI Gateway'
+GATEWAY_SERVICE_VERSION=0.1.0
+GATEWAY_DATABASE_URL=sqlite:///./database.db
+GATEWAY_RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+GATEWAY_SERVICE_PORT=8000
+GATEWAY_USERS_SERVICE_URL=http://users:8000
+GATEWAY_ENVIRONMENT=development
+GATEWAY_SENTRY_DSN=
+GATEWAY_SENTRY_RELEASE=0.1.0
+GATEWAY_ACCESS_TOKEN_EXPIRE_MINUTES=30
+GATEWAY_REFRESH_TOKEN_EXPIRE_DAYS=30
+GATEWAY_PRIVATE_KEY=./certs/private.pem
+GATEWAY_PUBLIC_KEY=./certs/public.pem
