--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ GATEWAY_SERVICE_VERSION=0.1.0
 GATEWAY_DATABASE_URL=sqlite:///./database.db
 GATEWAY_RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 GATEWAY_SERVICE_PORT=8000
+GATEWAY_TOKEN_SERVICE_URL=http://token:8000
 GATEWAY_USERS_SERVICE_URL=http://users:8000
 GATEWAY_ENVIRONMENT=development
 GATEWAY_SENTRY_DSN=
