fix: corrette variabili e connessione rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 GATEWAY_SERVICE_NAME='FastAPI Gateway'
 GATEWAY_SERVICE_VERSION=0.1.0
 GATEWAY_DATABASE_URL=sqlite:///./database.db
-GATEWAY_RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+GATEWAY_RABBITMQ_HOST=localhost
+GATEWAY_RABBITMQ_PORT=5672
+GATEWAY_RABBITMQ_USER=user
+GATEWAY_RABBITMQ_PASS=pass
 GATEWAY_SERVICE_PORT=8000
 GATEWAY_TOKEN_SERVICE_URL=http://token:8000
 GATEWAY_USERS_SERVICE_URL=http://users:8000
