--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (>=4.3.0,<5.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "pika (>=1.3.2,<2.0.0)"
+    "aio-pika (>=9.5.7,<10.0.0)",
 ]
 
 [build-system]
