--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "bcrypt (>=4.3.0,<5.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "aio-pika (>=9.5.7,<10.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
 ]
 
 [build-system]
