--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,10 @@ services:
   gateway-migrate:
     build: .
     command: alembic upgrade head   # sovrascrive il comando di avvio eseguendo solo le migrazioni
-    env_file: .env
     depends_on:
       - gateway_db
     networks:
-      - backend_net
+      - gateway_net
     deploy:
       replicas: 1   # forza una sola istanza
     restart: "no"   # non viene riavviato
@@ -23,14 +22,13 @@ services:
   gateway:
     build: .
     command: gunicorn -k uvicorn.workers.UvicornWorker app.main:app --workers 4
-    env_file: .env
     ports:
       - "8000:8000"
     depends_on:
       - gateway_db
       - gateway-migrate
     networks:
-      - backend_net
+      - gateway_net
       - micro_net
     restart: unless-stopped
 
@@ -45,13 +43,13 @@ services:
     volumes:
       - gateway_db_data:/var/lib/postgresql/data
     networks:
-      - backend_net
+      - gateway_net
     restart: unless-stopped
 
 volumes:
   gateway_db_data:
 
 networks:
-  backend_net:
+  gateway_net:
   micro_net:
     driver: bridge
