--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,7 @@ dependencies = [
     "pydantic[email] (>=2.11.7,<3.0.0)",
     "orjson (>=3.11.2,<4.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
-    "passlib (>=1.7.4,<2.0.0)",
-    "bcrypt (>=4.3.0,<5.0.0)",
+    "passlib[argon2] (>=1.7.4,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "aio-pika (>=9.5.7,<10.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
