--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ GATEWAY_RABBITMQ_PASS=pass
 GATEWAY_SERVICE_PORT=8000
 GATEWAY_TOKEN_SERVICE_URL=http://token:8000
 GATEWAY_USERS_SERVICE_URL=http://users:8000
+GATEWAY_SCHOOLS_SERVICE_URL=http://schools:8000
 GATEWAY_ENVIRONMENT=development
 GATEWAY_SENTRY_DSN=
 GATEWAY_SENTRY_RELEASE=0.1.0
